Remove the hack which does not fix blurred images in Chrome anymore
The problem appears only in Chrome and is caused by Chrome's
inability to downscale images without blurring them.
Since version 92 the hack used (transform: transaleZ(0)) does not work,
so I made the images slightly bigger with 'transform: scale()'
but this breaks the page on bigger touchscreen devices as the images
become too big.

--- a/styles/main.css
+++ b/styles/main.css
@@ -971,9 +971,6 @@
   height: auto;
   margin: 6.647% 2.068% 0 auto; 
   min-width: 0; /* Aligns images and descriptions in Chrome. */
-  transform: scale(1.0224); /* Fixes blurred images in Chrome since v.92.
-                            In earlier versions of Chrome, 'transform: transaleZ(0)' worked, 
-                            but now it doesn't fix all the images. */
   width: 25%;
   z-index: 1; 
 }
